<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.deletescape.controlbox.Reboot">

    <Button
        android:id="@+id/btn_reboot"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="rebootNormal"
        android:text="@string/btn_reboot" />

    <Button
        android:id="@+id/btn_reboot_recovery"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_reboot"
        android:onClick="rebootRecovery"
        android:text="@string/btn_reboot_recovery" />

    <Button
        android:id="@+id/btn_reboot_soft"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_reboot_recovery"
        android:onClick="rebootSoft"
        android:text="@string/btn_reboot_soft" />

    <Button
        android:id="@+id/btn_restart_systemui"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_reboot_soft"
        android:onClick="restartSystemUI"
        android:text="@string/btn_restart_systemui" />

    <Button
        android:id="@+id/btn_shutdown"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_restart_systemui"
        android:onClick="Shutdown"
        android:text="@string/btn_shutdown" />
</RelativeLayout>
